@@ -38,6 +38,10 @@
 <p>2018-03-31  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>coders/pcx.c (ReadPCXImage): Assure that scanline is
+initialized.  Fixes oss-fuzz 6612
+&quot;graphicsmagick/coder_PCX_fuzzer: Use-of-uninitialized-value in
+WriteRLEPixels&quot;. (Credit to OSS-Fuzz)</li>
 <li>coders/wpg.c (ReadWPGImage): Detect unexpected EOF and avoid use
 of uninitialized data.  Fixes oss-fuzz 6601
 &quot;graphicsmagick/enhance_fuzzer: Use-of-uninitialized-value in
